fixed some minor issues
