# app/controllers/student.controller.js
@@ -77,7 +77,7 @@ exports.update = (req, res) => {
     }
 
     const id = req.params.id;
-    if (req.user.id !== id || req.user.userType !== 'Student') {
+    if ((req.user.id !== id || req.user.userType !== 'Student')&&req.user.userType !== 'ITManager') {
         res.status(403).send({message: "not authorized to do this"})
         return;
     }
