# app/routes/professor.routes.js
@@ -1,5 +1,6 @@
 
 const { authJwt } = require("../middlewares");
+const professors = require("../controllers/professor.controller");
 
 module.exports = app => {
     const users = require("../controllers/user.controller.js");
@@ -11,6 +12,7 @@ module.exports = app => {
 
     router.get("/professor/:id" ,[authJwt.verifyToken], professors.findOne);
     router.get("/professors" ,[authJwt.verifyToken], professors.findAll);
+    router.put("/professor/:id" ,[authJwt.verifyToken], professors.update);
 
     app.use('/',router);
 };
