# openapi.yaml
@@ -6,14 +6,14 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 tags:
-- name: admin
-  description: Operations admin can perform
-- name: student
-  description: Operations students can perform
-- name: professor
-  description: Operations professors can perform
-- name: manager
-  description: Operations managers can perform
+  - name: admin
+    description: Operations admin can perform
+  - name: student
+    description: Operations students can perform
+  - name: professor
+    description: Operations professors can perform
+  - name: manager
+    description: Operations managers can perform
 
 paths:
   /login:
@@ -55,6 +55,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  accessToken:
+                    type: string
+
                   message:
                     type: string
         "500":
@@ -69,7 +72,7 @@ paths:
   /admin/professor:
     post:
       tags:
-      - admin
+        - admin
       description: create a new professor document
       requestBody:
         content:
@@ -102,7 +105,7 @@ paths:
                   message:
                     type: string
         "400":
-          description: bad request 
+          description: bad request
           content:
             application/json:
               schema:
@@ -121,7 +124,7 @@ paths:
                     type: string
     get:
       tags:
-      - admin
+        - admin
       description: return list of professors
       responses:
         "200":
@@ -163,17 +166,17 @@ paths:
   /admin/Professor/{ID}:
     get:
       tags:
-      - admin
+        - admin
       description: get professors info
       parameters:
-      - name: ID
-        required: true
-        schema:
-          type: string
+        - name: ID
+          required: true
+          schema:
+            type: string
 
-        in: path
-        description: document id of professor
-        
+          in: path
+          description: document id of professor
+
       responses:
         "200":
           description: successful operation
@@ -191,15 +194,15 @@ paths:
           description: not found
     put:
       tags:
-      - admin
+        - admin
       description: edit professor info
       parameters:
-      - name: ID
-        required: true
-        schema:
-          type: string
-        in: path
-        description: document id of professor
+        - name: ID
+          required: true
+          schema:
+            type: string
+          in: path
+          description: document id of professor
       requestBody:
         content:
           application/json:
@@ -253,15 +256,15 @@ paths:
                     type: string
     delete:
       tags:
-      - admin
+        - admin
       description: delete professor document
       parameters:
-      - name: ID
-        in: path
-        required: true
-        schema:
-          type: string
-        description: professor document id
+        - name: ID
+          in: path
+          required: true
+          schema:
+            type: string
+          description: professor document id
       responses:
         "200":
           description: successfully deleted
@@ -311,20 +314,20 @@ paths:
   /admin/student:
     post:
       tags:
-      - admin
+        - admin
       description: create a new student document
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Professor'
+              $ref: '#/components/schemas/Student'
       responses:
         "200":
           description: successfully created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Professor'
+                $ref: '#/components/schemas/Student'
         "403":
           description: authentication problem
           content:
@@ -344,7 +347,7 @@ paths:
                   message:
                     type: string
         "400":
-          description: bad request 
+          description: bad request
           content:
             application/json:
               schema:
@@ -363,7 +366,7 @@ paths:
                     type: string
     get:
       tags:
-      - admin
+        - admin
       description: return list of students
       responses:
         "200":
@@ -405,15 +408,15 @@ paths:
   /admin/student/{ID}:
     get:
       tags:
-      - admin
+        - admin
       description: get students info
       parameters:
-      - name: ID
-        in: path
-        required: true
-        schema:
-          type: string
-        description: document id of student
+        - name: ID
+          in: path
+          required: true
+          schema:
+            type: string
+          description: document id of student
       responses:
         "200":
           description: successful operation
@@ -431,21 +434,21 @@ paths:
           description: not found
     put:
       tags:
-      - admin
+        - admin
       description: edit students info
       parameters:
-      - name: ID
-        required: true
-        schema:
-          type: string
+        - name: ID
+          required: true
+          schema:
+            type: string
 
-        in: path
-        description: document id of student
+          in: path
+          description: document id of student
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Professor'
+              $ref: '#/components/schemas/Student'
       responses:
         "200":
           description: successfully edited
@@ -494,15 +497,15 @@ paths:
                     type: string
     delete:
       tags:
-      - admin
+        - admin
       description: delete student document
       parameters:
-      - name: ID
-        required: true
-        schema:
-          type: string
-        in: path
-        description: professor document id
+        - name: ID
+          required: true
+          schema:
+            type: string
+          in: path
+          description: professor document id
       responses:
         "200":
           description: successfully deleted
@@ -552,7 +555,7 @@ paths:
   /admin/manager:
     post:
       tags:
-      - admin
+        - admin
       description: create a new manager document
       requestBody:
         content:
@@ -585,7 +588,7 @@ paths:
                   message:
                     type: string
         "400":
-          description: bad request 
+          description: bad request
           content:
             application/json:
               schema:
@@ -604,7 +607,7 @@ paths:
                     type: string
     get:
       tags:
-      - admin
+        - admin
       description: return list of managers
       responses:
         "200":
@@ -645,17 +648,17 @@ paths:
   /admin/manager/{ID}:
     get:
       tags:
-      - admin
+        - admin
       description: get managers info
       parameters:
 
-      - name: ID
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: ID
+          in: path
+          required: true
+          schema:
+            type: string
 
-        description: document id of manager
+          description: document id of manager
       responses:
         "200":
           description: successful operation
@@ -701,16 +704,16 @@ paths:
                     type: string
     put:
       tags:
-      - admin
+        - admin
       description: edit managers info
       parameters:
-      - name: ID
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: ID
+          in: path
+          required: true
+          schema:
+            type: string
 
-        description: document id of manager
+          description: document id of manager
       requestBody:
         content:
           application/json:
@@ -764,16 +767,16 @@ paths:
                     type: string
     delete:
       tags:
-      - admin
+        - admin
       description: delete managers document
       parameters:
-      - name: ID
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: ID
+          in: path
+          required: true
+          schema:
+            type: string
 
-        description: manager document id
+          description: manager document id
       responses:
         "200":
           description: successfully deleted
@@ -823,15 +826,15 @@ paths:
   /course:
     post:
       tags:
-      - manager
+        - manager
       description: create a new course
       requestBody:
         content:
           application/json:
             schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Course'
-                  - $ref: '#/components/schemas/TermCourse'
+              oneOf:
+                - $ref: '#/components/schemas/Course'
+                - $ref: '#/components/schemas/TermCourse'
       responses:
         "200":
           description: create a new course
@@ -860,7 +863,7 @@ paths:
                   message:
                     type: string
         "400":
-          description: bad request 
+          description: bad request
           content:
             application/json:
               schema:
@@ -880,18 +883,18 @@ paths:
   /course/{ID}:
     get:
       tags:
-      - manager
-      - student
-      - professor
+        - manager
+        - student
+        - professor
       description: create a new course
       parameters:
-      - name: ID
-        in: path
-        required: true
+        - name: ID
+          in: path
+          required: true
 
-        description:  course document id
-        schema:
-          type: string
+          description:  course document id
+          schema:
+            type: string
       responses:
         "200":
           description: create a new course
@@ -931,23 +934,23 @@ paths:
                     type: string
     put:
       tags:
-      - manager
+        - manager
       description: edit a course
       parameters:
-      - name: ID
-        required: true
+        - name: ID
+          required: true
 
-        in: path
-        description: The ID of the course
-        schema:
-          type: string
+          in: path
+          description: The ID of the course
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
             schema:
               oneOf:
                 - $ref: '#/components/schemas/Course'
-                - $ref: '#/components/schemas/TermCourse'              
+                - $ref: '#/components/schemas/TermCourse'
       responses:
         "200":
           description: success
@@ -977,7 +980,7 @@ paths:
                   message:
                     type: string
         "400":
-          description: bad request 
+          description: bad request
           content:
             application/json:
               schema:
@@ -996,17 +999,17 @@ paths:
                     type: string
     delete:
       tags:
-      - manager
+        - manager
       description: delete a course
       parameters:
-      - name: ID
-        in: path
-        description: course id
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
+        - name: ID
+          in: path
+          description: course id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
       responses:
         "200":
           description: success
@@ -1036,7 +1039,7 @@ paths:
                   message:
                     type: string
         "400":
-          description: bad request 
+          description: bad request
           content:
             application/json:
               schema:
@@ -1056,17 +1059,17 @@ paths:
   /courses:
     get:
       tags:
-      - manager
-      - student
-      - professor
+        - manager
+        - student
+        - professor
       description: get the courses with major query
       parameters:
-      - name: majorquery
-        in: query
-        description: courses major
-        required: false
-        schema:
-          type: string
+        - name: majorquery
+          in: query
+          description: courses major
+          required: false
+          schema:
+            type: string
       responses:
         "200":
           description: get all the courses
@@ -1076,8 +1079,8 @@ paths:
                 type: array
                 items:
                   oneOf:
-                  - $ref: '#/components/schemas/Course'
-                  - $ref: '#/components/schemas/TermCourse'
+                    - $ref: '#/components/schemas/Course'
+                    - $ref: '#/components/schemas/TermCourse'
         "403":
           description: authentication problem
           content:
@@ -1097,7 +1100,7 @@ paths:
                   message:
                     type: string
         "400":
-          description: bad request 
+          description: bad request
           content:
             application/json:
               schema:
@@ -1105,27 +1108,23 @@ paths:
                 properties:
                   message:
                     type: string
-                    
+
 components:
   schemas:
     Professor:
       required:
-      - department
-      - email
-      - major
-      - name
-      - user_id
-      - password
-      - phone_no
-      - rank
-      - userType
-      - id
+        - department
+        - email
+        - major
+        - name
+        - user_id
+        - password
+        - phone_no
+        - rank
+        - userType
       type: object
       properties:
-        id:
-          type: string
-          format: objectId
-          example: 645e645a3154c5c19dec0c23
+
         name:
           type: string
           example: jack
@@ -1135,7 +1134,7 @@ components:
         email:
           type: string
           example: example@example.com
-        phone:
+        phone_no:
           type: string
           example: 0900000000
         user_id:
@@ -1152,19 +1151,18 @@ components:
           example: full
     Student:
       required:
-      - department
-      - email
-      - entry_term
-      - entry_year
-      - major
-      - name
-      - gpa
-      - degree
-      - id
-      - password
-      - phone_no
-      - userType
-      - user_id
+        - department
+        - email
+        - entry_term
+        - entry_year
+        - major
+        - name
+        - gpa
+        - degree
+        - password
+        - phone_no
+        - userType
+        - user_id
       type: object
       properties:
         user_id:
@@ -1182,10 +1180,6 @@ components:
         degree:
           type: string
           example: bsc
-        id:
-          type: string
-          format: objectId
-          example: 645e645a3154c5c19dec0c23
         entry_year:
           type: number
           example: 1400
@@ -1209,14 +1203,13 @@ components:
           example: Professor
     EducationalManager:
       required:
-      - user_id
-      - department
-      - email
-      - name
-      - id
-      - password
-      - phone_no
-      - userType
+        - user_id
+        - department
+        - email
+        - name
+        - password
+        - phone_no
+        - userType
       type: object
       properties:
         user_id:
@@ -1225,10 +1218,6 @@ components:
         department:
           type: string
           example: EE
-        id:
-          type: string
-          format: objectId
-          example: 645e645a3154c5c19dec0c23
         name:
           type: string
           example: jack
@@ -1246,13 +1235,13 @@ components:
           example: EducationalManager
     Course:
       required:
-      - name
-      - corequisites
-      - prerequisites
-      - unit_no
-      - major
-      - id
-      - userType
+        - name
+        - corequisites
+        - prerequisites
+        - unit_no
+        - major
+        - userType
+        - course_type
       type: object
       properties:
         major:
@@ -1261,10 +1250,10 @@ components:
         unit_no:
           type: number
           example: 2
-        id:
+        course_type:
           type: string
-          format: objectId
-          example: 645e645a3154c5c19dec0c23
+          example: "ApprovedCourse"
+
         name:
           type: string
           example: DB
@@ -1278,21 +1267,24 @@ components:
             $ref: '#/components/schemas/Course'
     TermCourse:
       required:
-      - class_time
-      - exam_time
-      - exam_location
-      - id
-      - professor
-      - term
-      - capacity
-      - name
-      - corequisites
-      - prerequisites
-      - unit_no
-      - major
-      - userType
+        - class_time
+        - exam_time
+        - exam_location
+        - professor
+        - term
+        - capacity
+        - name
+        - corequisites
+        - prerequisites
+        - unit_no
+        - major
+        - userType
+        - course_type
       type: object
       properties:
+        course_type:
+          type: string
+          example: "TermCourse"
         major:
           type: string
           example: Computer Science
@@ -1310,10 +1302,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Course'
-        id:
-          type: string
-          format: objectId
-          example: 645e645a3154c5c19dec0c23
         professor:
           type: string
           format: objectId
